Style core amenities to have correct spacing

--- a/app/assets/stylesheets/api/listings/listing_detail.scss
+++ b/app/assets/stylesheets/api/listings/listing_detail.scss
@@ -63,12 +63,12 @@
   font-size: 16px;
 }
 
-.listing-detail-core-amenities > span {
-  margin-right: 15px;
+.core-amenities-count {
+  margin-right: 5px !important;
 }
 
-.core-amenities-count {
-  margin-right: 5px;
+.listing-detail-core-amenities > span {
+  margin-right: 20px;
 }
 
 #guestsLogo {
